261
Also shows up in the {{annotations.scala}} test:

{code}
testing: [...]/files/jvm5/annotations.scala                           [FAILED]
annotations.scala:17: error: type mismatch;
 found   : java.lang.Class[java.io.IOException]
 required: java.lang.Class forSome { type _$$1 }
    @throws(classOf[IOException])
            ^
one error found
{code}

This test has also been moved to pending until the bug is fixed.
